<resources>
    <string name="app_name">Celeiro Nisa</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>

    <string name="home_second">Home Second</string>
    <string name="todo">TODO</string>
    <string name="copyright">© Celeiro Gamespot Nisa 2020</string>
    <string name="menusemana">menusemana</string>
    <string name="menu">menu</string>
    <string name="clientes">Clientes</string>
    <string name="servicos">Servicos</string>
    <string name="galeria">Galeria</string>
    <string name="contactos">Contactos</string>
    <string name="pub1">Publicidade 1</string>
    <string name="pub2">Publicidade 2</string>
    <string name="menu_servicos">Serviços</string>
    <string name="menu_menu">Menu</string>
    <string name="menu_menudodia">Menu da Semana</string>
    <string name="menu_contactos">Contactos</string>
    <string name="menu_galeria_pratos">Galeria Pratos</string>
    <string name="menu_galeria_saladas">Galeria Saladas</string>
    <string name="menu_galeria_snacks">Galeria Snacks</string>
    <string name="menu_galeria_casa">Galeria Casa</string>
    <string name="menu_galeria_festas">Galeria Festas</string>
    <string name="menu_clientes">Clientes</string>
    <string name="messenger"><a href="https://m.me/CeleiroNisa">Messenger</a></string>
    <string name="whatsapp"><a href="https://api.whatsapp.com/send?phone=351913387635">Whatsapp</a></string>
    <string name="morada1"><a href="https://www.google.com/maps/place/Celeiro+Gamespot+Nisa/@39.511708,-7.64943,15z/data=!4m5!3m4!1s0x0:0xb57c81f89ae8f24!8m2!3d39.511708!4d-7.64943">Rua Alexandre Herculano, 63</a></string>
    <string name="morada2"><a href="https://www.google.com/maps/place/Celeiro+Gamespot+Nisa/@39.511708,-7.64943,15z/data=!4m5!3m4!1s0x0:0xb57c81f89ae8f24!8m2!3d39.511708!4d-7.64943">6050-346 Nisa</a></string>
    <string name="morada">Morada</string>
    <string name="telemovel">Telemóvel</string>
    <string name="telefone">Telefone</string>
    <string name="messenger_">Messenger</string>
    <string name="whatsapp_">Whatsapp</string>
    <string name="mail">EMail</string>

    
    <string name="hello_blank_fragment">blablabla</string>
</resources>
